fix bug on small screen

--- a/components/layouts/Page/page.style.scss
+++ b/components/layouts/Page/page.style.scss
@@ -1,6 +1,10 @@
 .app {
     flex: 1;
-    overflow: hidden;
+    overflow: auto;
+
+    .app-row {
+        overflow: auto;
+    }
 
     .app-background {
         flex: 1;
@@ -14,6 +18,7 @@
         position: absolute;
         width: 100%;
         height: 100%;
+        min-height: 600px;
         border-radius: 3px;
         padding: $spacing-md;
         padding-bottom: 0;
